--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<!-- <meta http-equiv="Refresh" content="2; url=public/index.html"> -->
-<meta http-equiv="Refresh" content="2; url=build/index.html">
+<meta http-equiv="Refresh" content="2; url=public/index.html">
